--- a/dissertation_client/public/locales/en/translation.json
+++ b/dissertation_client/public/locales/en/translation.json
@@ -1,9 +1,5 @@
 {
-    "title": "Welcome to react using react-i18next",
-    "description": {
-      "part1": "To get started, edit <1>src/App.js</1> and save to reload.",
-      "part2": "Switch language between english and german using buttons above."
-    },
+    "preview": "Preview" ,
     "sidebar": {
       "dashboard": "Dashboard",
       "warehouse": "Warehouse",
@@ -99,6 +95,113 @@
       "totalUser": "Total Admin",
       "totalRole": "Total Role",
       "address": "Admin Address"
+    },
+    "producerDetails": {
+      "title": "Producer",
+      "info": "Information Form",
+      "producer": "Producer",
+      "warehouse": "Warehouse",
+      "distributor": "Distributor",
+      "vaccinationStation": "Vaccination Station",
+      "vaccinationStationHolder": "Enter vaccination station name",
+      "quantity": "Quantity",
+      "quantityHolder": "Enter quantity",
+      "optimumRangeTemp": "Optimum range temperature",
+      "rangeTempHolder": "Enter optimum range temperature",
+      "optimumRangeHum": "Optimum range humidity",
+      "rangeHumHolder": "Enter optimum range humidity",
+      "confirm": "Confirm",
+      "cancel": "Cancel"
+    },
+    "warehouseForm": {
+      "title": "Warehouse",
+      "info": "Information Form",
+      "batchNo": "Batch No",
+      "batchNoHolder": "Enter batch no",
+      "vaccineName": "Vaccine Name",
+      "quantity": "Quantity",
+      "quantityHolder": "Enter quantity",
+      "price": "Price",
+      "priceHolder": "Enter price",
+      "optimumTemp": "Enter optimum temperature",
+      "optimumTempHolder": "Enter optimum temperature holder (Ex: 10 - 15)",
+      "optimumHum": "Optimum Humidity",
+      "optimumHumHolder": "Enter Humidity Holder (Ex : 7 - 19)",
+      "locationAddress": "Location Address",
+      "locationAddressHolder": "Enter location address",
+      "storageDate": "Storage Date",
+      "storageDateHolder": "Enter storage date",
+      "violation": "Violate Status",
+      "confirm": "Confirm",
+      "cancel": "Cancel",
+      "hasViolate": "Violate",
+      "noViolate": "No violate",
+      "yes": "Violate",
+      "no": "No violate"
+    },
+    "distributorForm": {
+      "title": "Distributor",
+      "info": "Information Form",
+      "batchNo":"Batch No",
+      "batchNoHolder":"Enter batch no",
+      "shippingName": "Shipping Name",
+      "shippingNameHolder": "Enter shipping name",
+      "destinationAddress": "Destination Address",
+      "destinationAddressHolder": "Enter destination address",
+      "quantity": "Quantity",
+      "quantityHolder": "Enter quantity",
+      "departureDateTime": "Departure Date Time",
+      "departureDateTimeHolder": "Select departure date time",
+      "estimateDateTime": "Estimate Date Time",
+      "estimateDateTimeHolder": "Select estimate date time",
+      "distributorId": "Distributor ID/Code",
+      "distributorIdHolder":"Enter distributor Id", 
+      "optimumTemp": "Enter optimum temperature",
+      "optimumTempHolder": "Enter optimum temperature holder (Ex: 10 - 15)",
+      "optimumHum": "Optimum Humidity",
+      "optimumHumHolder": "Enter Humidity Holder (Ex : 7 - 19)",
+      "confirm": "Confirm",
+      "cancel": "Cancel"
+    },
+    "stationForm": {
+      "title": "Vaccination Station",
+      "info": "Information Form",
+      "batchNo":"Batch No",
+      "batchNoHolder":"Enter Batch No Holder",
+      "quantity": "Quantity",
+      "quantityHolder": "Enter quantity",
+      "arrivalDateTime":"Arrival Date Time",
+      "arrivalDateTimeHolder": "Select arrival date time",
+      "vaccinationStationId":"Vaccination Station ID",
+      "vaccinationStationIdHolder": "Enter vaccination station ID",
+      "shippingName":"Shipping Name",
+      "shippingNameHolder":"Enter shipping name",
+      "shippingNo":"Shipping No",
+      "shippingNoHolder": "Enter shipping No",
+      "locationAddress":"Location Address",
+      "locationAddressHolder":"Enter location address",
+      "confirm": "Confirm",
+      "cancel": "Cancel"
+    },
+    "objectForm": {
+      "title": "Object Injection",
+      "info": "Information Form",
+      "batchNo":"Batch No",
+      "batchNoHolder":"Enter batch no",
+      "personName":"Full Name",
+      "personNameHolder": "Enter full name",
+      "age": "Age",
+      "ageHolder": "Enter age",
+      "indetityCard": "Indentity Card",
+      "identityCardHolder": "Enter Identity Card",
+      "numberOfVaccination": "Number Of Vaccination",
+      "numberOfVaccinationHolder": "Enter number of vaccination",
+      "vaccineDate": "Vaccine Date",
+      "vaccineDateHolder": "Select vaccine date",
+      "typeOfVaccine": "Type Of Vaccine",
+      "typeOfVaccineHolder": "Type Of Vaccine Holder",
+      "confirm": "Confirm",
+      "cancel":"Cancel"
     }
 
   }
