--- a/dissertation_client/public/locales/vn/translation.json
+++ b/dissertation_client/public/locales/vn/translation.json
@@ -1,15 +1,11 @@
 {
-  "title": "Welcome to react using react-i18next",
-  "description": {
-    "part1": "To get started, edit <1>src/App.js</1> and save to reload.",
-    "part2": "Switch language between english and german using buttons above."
-  },
+  "preview": "Xem trước",
   "sidebar": {
     "dashboard": "Bảng điều khiển",
     "warehouse": "Quản lý kho",
     "distributor": "Nhà phân phối",
-    "destination": "Địa điểm tiêm",
-    "objectInjection": "Đối tượng tiêm",
+    "destination": "Địa điểm tiêm chủng",
+    "objectInjection": "Đối tượng tiêm chủng",
     "manageAdmin": "Quản lý Admin"
   },
   "header": {
@@ -100,5 +96,112 @@
     "totalUser": "Tổng số quản trị viên",
     "totalRole": "Vai trò",
     "address": "Địa chỉ admin"
+  },
+  "producerDetails": {
+    "title": "Nhà sản xuất",
+    "info": "Thông tin",
+    "producer": "Nhà sản xuất",
+    "warehouse": "Kho lưu trữ",
+    "distributor": "Nhà phân phối",
+    "vaccinationStation": "Địa điểm tiêm chủng",
+    "vaccinationStationHolder": "Tên địa điểm tiêm chủng",
+    "quantity": "Số lượng",
+    "quantityHolder": "Số lượng liều vắc xin",
+    "optimumRangeTemp": "Nhiệt độ bảo quản",
+    "rangeTempHolder": "Nhập nhiệt độ bảo quản vắc xin",
+    "optimumRangeHum": "Độ ẩm bảo quản",
+    "rangeHumHolder": "Nhập độ ẩm bảo quản vắc xin",
+    "confirm": "Xác nhận",
+    "cancel": "Hủy"
+  },
+  "warehouseForm": {
+    "title": "Kho bảo quản",
+    "info": "Thông tin",
+    "batchNo": "Mã lô hàng",
+    "batchNoHolder": "Nhập mã lô hàng",
+    "vaccineName": "Tên vắc xin",
+    "quantity": "Số lượng nhập kho",
+    "quantityHolder": "Số lượng liều vắc xin",
+    "price": "Giá",
+    "priceHolder": "Nhập giá lô hàng",
+    "optimumTemp": "Nhiệt độ bảo quản",
+    "optimumTempHolder": "Nhập nhiệt độ bảo quản (ví dụ: 10 - 15)",
+    "optimumHum": "Độ ẩm bảo quản",
+    "optimumHumHolder": "Nhập độ ẩm bảo quản (ví dụ : 7 - 19)",
+    "locationAddress": "Địa chỉ kho",
+    "locationAddressHolder": "Nhập địa chỉ kho bảo quản",
+    "storageDate": "Ngày nhập lô hàng",
+    "storageDateHolder": "Ngày nhập lô hàng",
+    "violation": "Tình trạng nhiệt độ",
+    "confirm": "Xác nhận",
+    "cancel": "Hủy giao dịch",
+    "hasViolate": "Vị phạm",
+    "noViolate": "Không vi phạm",
+    "yes": "Vi phạm nhiệt độ/độ ẩm",
+    "no": "Không vi phạm nhiệt độ/độ ẩm"
+  },
+  "distributorForm": {
+    "title": "Nhà phân phối",
+    "info": "Thông tin",
+    "batchNo":"Mã lô hàng",
+    "batchNoHolder":"Nhập mã lô hàng",
+    "shippingName": "Đơn vị vận chuyển",
+    "shippingNameHolder": "Nhập tên đơn vị vận chuyển",
+    "destinationAddress": "Địa chỉ đích đến",
+    "destinationAddressHolder": "Nhập địa chỉ đích đến",
+    "quantity": "Số lượng",
+    "quantityHolder": "Nhập số lượng",
+    "departureDateTime": "Ngày khởi hành",
+    "departureDateTimeHolder": "Chọn ngày khởi hành",
+    "estimateDateTime": "Ngày ước tính",
+    "estimateDateTimeHolder": "Chọn ngày ước tính",
+    "distributorId": "Mã đơn vị vận chuyển",
+    "distributorIdHolder":"Nhập mã đơn vị vận chuyển", 
+    "optimumTemp": "Nhiệt độ bảo quản",
+    "optimumTempHolder": "Nhập nhiệt độ bảo quản (ví dụ: 10 - 15)",
+    "optimumHum": "Độ ẩm bảo quản",
+    "optimumHumHolder": "Nhập độ ẩm bảo quản (ví dụ : 7 - 19)",
+    "confirm": "Xác nhận",
+    "cancel":"Hủy giao dịch"
+  },
+  "stationForm": {
+    "title": "Địa điểm tiêm chủng",
+    "info": "Thông tin",
+    "batchNo":"Mã lô hàng",
+    "batchNoHolder":"Nhập mã lô hàng",
+    "quantity": "Số lượng",
+    "quantityHolder": "Số lượng liều vắc xin",
+    "arrivalDateTime":"Ngày đến",
+    "arrivalDateTimeHolder": "Chọn ngày nhận lô vắc xin",
+    "vaccinationStationId":"ID địa điểm tiêm chủng",
+    "vaccinationStationIdHolder": "Nhập ID địa điểm tiêm chủng",
+    "shippingName":"Đơn vị vận chuyển",
+    "shippingNameHolder":"Nhập tên đơn vị vận chuyển",
+    "shippingNo":"Mã vận chuyển",
+    "shippingNoHolder": "Nhập mã số đơn vị vận chuyển",
+    "locationAddress":"Địa chỉ tiêm chủng",
+    "locationAddressHolder":"Nhập địa chỉ tiêm chủng",
+    "confirm": "Xác nhận",
+    "cancel":"Hủy giao dịch"
+  },
+  "objectForm": {
+    "title": "Đối tượng tiêm chủng",
+    "info": "Thông tin",
+    "batchNo":"Mã lô hàng",
+    "batchNoHolder":"Nhập mã lô hàng",
+    "personName":"Họ và tên (người được tiêm vắc xin)",
+    "personNameHolder": "Nhập họ tên",
+    "age": "Tuổi",
+    "ageHolder": "Nhập tuổi",
+    "indetityCard": "Số CMND/CCCD",
+    "identityCardHolder": "Nhập số CMND/CCCD",
+    "numberOfVaccination": "Số liều vắc xin",
+    "numberOfVaccinationHolder": "Nhập số liều vắc xin",
+    "vaccineDate": "Ngày tiêm vắc xin",
+    "vaccineDateHolder": "Chọn ngày tiêm vắc xin",
+    "typeOfVaccine": "Loại vắc xin",
+    "typeOfVaccineHolder": "Nhập loại vắc xin",
+    "confirm": "Xác nhận",
+    "cancel":"Hủy giao dịch"
   }
 }
